--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^4.4.7",
         "html-react-parser": "^5.2.1",
+        "jspdf": "^2.5.2",
+        "jspdf-autotable": "^3.8.4",
         "quill": "^2.0.3",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.5",
