--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "dependencies": {
         "@emotion/react": "^11.13.5",
         "@emotion/styled": "^11.13.5",
+        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/material": "^6.1.10",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
