--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@mui/material": "^6.1.10",
         "axios": "^1.7.9",
+        "body-parser": "^1.20.3",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^4.4.7",
+        "express": "^4.21.2",
         "html-react-parser": "^5.2.1",
         "jspdf": "^2.5.2",
         "jspdf-autotable": "^3.8.4",
+        "mailgun.js": "^11.1.0",
         "quill": "^2.0.3",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.5",
