--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-dom": "^18.3.1",
         "react-quill": "^2.0.0",
         "react-router-dom": "^6.27.0",
+        "reactour": "^1.19.4",
         "swiper": "^7.4.1"
     },
     "devDependencies": {
