--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^4.4.7",
+        "dompurify": "^3.2.5",
         "express": "^4.21.2",
         "html-react-parser": "^5.2.1",
         "jspdf": "^2.5.2",
