--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "dompurify": "^3.2.5",
         "express": "^4.21.2",
         "html-react-parser": "^5.2.1",
+        "html2canvas": "^1.4.1",
         "jspdf": "^2.5.2",
         "jspdf-autotable": "^3.8.4",
         "mailgun.js": "^11.1.0",
