--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
+    "browser-image-compression": "^2.0.2",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "swiper": "^11.2.10"
   },
